--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ on:
 
 jobs:
   test:
+    name: Test
     runs-on: ubuntu-latest
 
     steps:
@@ -35,3 +36,25 @@ jobs:
       run: |
         luacheck src
         luacov -r lcov
+
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v1
+      with:
+        submodules: true
+
+    - uses: Roblox/setup-foreman@v1
+      with:
+        version: "^1.0.0"
+        token: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Report tool versions
+      run: rojo --version
+
+    - name: Deploy
+      run: rojo build --output "Filmmaker.rbxmx"
+      env:
+        ROBLOSECURITY: ${{ secrets.ROBLOSECURITY }}
