--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
 
     - name: Build
       run: |
-        rojo build -o filmmaker.rbxmx
+        rojo build -o Filmmaker.rbxmx
 
     - name: Upload Release Asset
       id: upload-release-asset 
@@ -33,7 +33,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ./filmmaker.rbxmx
-        asset_name: filmmaker.rbxmx
-        asset_content_type: application/zip
+        asset_path: ./Filmmaker.rbxmx
+        asset_name: Filmmaker.rbxmx
+        asset_content_type: application/xml
       
