--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,7 +3,7 @@ name: Documentation
 on: 
   push: 
     branches: [master]
-    
+
 jobs: 
   build: 
     name: Deploy Documentation 
@@ -20,8 +20,9 @@ jobs:
       - name: Install dependencies 
         run: | 
           python -m pip install --upgrade pip 
+          pip install mkdocs
           pip install mkdocs-material 
 
       - name: Deploy 
         run: | 
-          git pull mkdocs gh-deploy
+          mkdocs gh-deploy
