--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,28 +1,19 @@
-name: Documentation
+name: Deploy Documentation
 
-on: 
-  push: 
-    branches: [master]
+on:
+  push:
+    branches:
+      - master
 
-jobs: 
-  build: 
-    name: Deploy Documentation 
-    runs-on: ubuntu-latest 
-    steps: 
-      - name: Checkout Master 
+jobs:
+  build:
+    name: Deploy docs
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout master
         uses: actions/checkout@v2
-        
-      - name: Set up Python 3.7 
-        uses: actions/setup-python@v2 
-        with: 
-          python-version: '3.x' 
 
-      - name: Install dependencies 
-        run: | 
-          python -m pip install --upgrade pip 
-          pip install mkdocs
-          pip install mkdocs-material 
-
-      - name: Deploy 
-        run: | 
-          mkdocs gh-deploy
+      - name: Deploy docs
+        uses: mhausenblas/mkdocs-deploy-gh-pages@1.11
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
