Reorganization; add UI code
Roact!

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Filmmaker Plugin Documentation
+site_name: Filmmaker Plugin
 site_url: https://tbj-team.github.io/filmmaker-plugin/
 repo_name: TBJ-Team/filmmaker-plugin
 repo_url: https://github.com/TBJ-Team/filmmaker-plugin
