--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@rbxts/types": "^1.0.393"
   },
   "dependencies": {
+    "@rbxts/cubic-bezier": "^1.0.2",
     "@rbxts/roact": "^1.3.0-ts.2"
   }
 }
