--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@rbxts/types": "^1.0.393"
+    "@rbxts/types": "^1.0.420"
   },
   "dependencies": {
     "@rbxts/cubic-bezier": "^1.0.2",
-    "@rbxts/roact": "^1.3.0-ts.2"
+    "@rbxts/roact": "^1.3.0-ts.2",
+    "typescript": "^4.0.3"
   }
 }
