--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@rbxts/cubic-bezier": "^1.0.2",
     "@rbxts/roact": "^1.3.0-ts.2",
+    "@rbxts/services": "^1.1.1",
     "typescript": "^4.0.3"
   }
 }
