More crash report shenannigans
DO NOT PUBLISH THIS! PLEASE, FOR THE LOVE OF ALL THAT IS HOLY, DO NOT PUBLISH A RELEASE FOR THIS! THIS COULD LITERALLY BREAK EVERYTHING!

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "filmmaker-plugin",
+  "name": "filmmaker",
   "version": "1.0.0",
   "description": "An animation suite for the modern era",
   "main": "index.js",
