--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@rbxts/types": "^1.0.420"
+    "@rbxts/types": "^1.0.420",
+    "@typescript-eslint/eslint-plugin": "^4.8.0",
+    "@typescript-eslint/parser": "^4.8.0",
+    "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-roblox-ts": "0.0.24",
+    "prettier": "^2.1.2"
   },
   "dependencies": {
     "@rbxts/cubic-bezier": "^1.0.2",
