fixing up UI, remove roact

--- a/src/crash_config.json
+++ b/src/crash_config.json
@@ -1,5 +1,5 @@
 {
-  "comments": ["That was intended. No, seriously. That was meant to happen.",
+  "comments": ["That was intended. No, seriously. That was meant to happen.", "Boo yeah! Wait.",
     "Oops!", "Pop the champagne! Oh.", "Crud.", "Check out our sister game, Flimmaker!", "Calculated.", "Boo!",
     "Filmmaker was filmed in front of a live studio audience. Nobody laughed, but they were there.", "Surprise!",
     "Beam me up, Roblox Studio.", "Anyway, here's Wonderwall.", "Oh, fiddlesticks. What now?", "Crash 2: Episode 2",
