--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "filmmaker",
-  "version": "0.4.7-0",
+  "version": "0.4.7",
   "description": "An animation suite for the modern era",
   "main": "index.js",
   "scripts": {
