--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,7 @@
 site_name: Filmmaker
 site_url: https://gyrolabs.github.io/filmmaker/
+site_author: Gyro Laboratories
+site_keywords: animation, roblox
 site_description: >-
   Create fluid animation with Filmmaker, the animation suite produced
   by Gyro Laboratories. Explore many different possibilities,
